[tool.poetry]
name = "lineback"
version = "0.1.0"
description = "A PyTorch Lightning callback that sends progress reports through LINE."
authors = ["Ryan Soh-Eun Shim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3"
matplotlib = "~3"
lightning = "~2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
